--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,57 +1,3 @@
-html,
-body {
-  background: transparent;
-  min-height: 100vh;
-}
-
-html {
-  background: url("/static/img/wallpaper.jpg") no-repeat;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
-.ck-editor__editable {
-  min-height: 120px !important;
-}
-
-.card-img-top {
-  height: 200px !important;
-  object-fit: cover;
-  overflow-y: hidden;
-}
-
-table {
-  --bs-table-bg: transparent;
-  --bs-table-accent-bg: transparent;
-  --bs-table-striped-color: #212529;
-  --bs-table-striped-bg: rgba(0, 0, 0, 0.05);
-  --bs-table-active-color: #212529;
-  --bs-table-active-bg: rgba(0, 0, 0, 0.1);
-  --bs-table-hover-color: #212529;
-  --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
-  width: 100%;
-  margin-bottom: 1rem;
-  color: #212529;
-  vertical-align: top;
-  border-color: #dee2e6;
-}
-
-table > :not(caption) > * > * {
-  padding: 0.5rem 0.5rem;
-  background-color: var(--bs-table-bg);
-  border-bottom-width: 1px;
-  box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
-}
-
-table > tbody {
-  vertical-align: inherit;
-}
-
-table > thead {
-  vertical-align: bottom;
-}
-
-table > :not(:first-child) {
-  border-top: 2px solid currentColor;
+main.container {
+    min-height: 60vh;
 }
