--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
-main.container {
-    min-height: 60vh;
+main.container,
+.h-57 {
+    min-height: 57vh;
+}
+.w-10 {
+    min-width: 10em;
+}
+.w-20 {
+    width: 20em;
 }
