--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
-main.container,
-.h-57 {
-    min-height: 57vh;
+main.d-flex {
+    min-height: 100vh;
 }
 .w-10 {
     min-width: 10em;
@@ -8,8 +7,10 @@ main.container,
 .w-20 {
     width: 20em;
 }
+.w-30 {
+    width: 30em;
+}
 .sidebar {
-    height: 100vh;
     width: 15em;
     overflow-y: auto;
 }
